Use numbered class alias and storage path when installing duplicate puzzles